--- a/public/index.html
+++ b/public/index.html
@@ -26,23 +26,23 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- Primary Meta Tags -->
-    <title> COVID-19 Tracker | India | Voice </title>
-    <meta name="title" content="COVID-19 Tracker | India">
-    <meta name="description" content="Volunteer-driven crowdsourced initiative to track the spread of Coronavirus (COVID-19) in India">
-    <meta name="keywords" content="coronavirus,corona,covid,covid19,covid-19,covidindia,india,virus">
+    <title>India Covid-19 Voice enabled tracker | India </title>
+    <meta name="title" content="India Covid-19 Voice enabled tracker | India ">
+    <meta name="description" content="Voice enabled volunteer-driven crowdsourced initiative to track the spread of Coronavirus (COVID-19) in India">
+    <meta name="keywords" content="voice,coronavirus,corona,covid,covid19,covid-19,covidindia,india,virus">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.covid19india.org">
-    <meta property="og:title" content="COVID-19 Tracker | India">
-    <meta property="og:description" content="Volunteer-driven crowdsourced initiative to track the spread of Coronavirus (COVID-19) in India">
+    <meta property="og:url" content="https://covid19india.slanglabs.in/">
+    <meta property="og:title" content="India Covid-19 Voice enabled tracker  | India ">
+    <meta property="og:description" content="Voice enabled volunteer-driven crowdsourced initiative to track the spread of Coronavirus (COVID-19) in India.">
     <meta property="og:image" content="/thumbnail.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.covid19india.org">
-    <meta property="twitter:title" content="COVID-19 Tracker | India">
-    <meta property="twitter:description" content="Volunteer-driven crowdsourced initiative to track the spread of Coronavirus (COVID-19) in India">
+    <meta property="twitter:url" content="https://covid19india.slanglabs.in/">
+    <meta property="twitter:title" content="India Covid-19 Voice enabled tracker | India ">
+    <meta property="twitter:description" content="Voice enabled volunteer-driven crowdsourced initiative to track the spread of Coronavirus (COVID-19) in India">
     <meta property="twitter:image" content="/thumbnail.png">
   </head>
   <body>
@@ -60,11 +60,11 @@
     -->
   </body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160698988-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123830474-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-160698988-1');
+    gtag('config', 'UA-123830474-2');
   </script>
 </html>
