Change from multi intent to single intent, add tested cases to possible search plus minor changes

--- a/public/index.html
+++ b/public/index.html
@@ -38,14 +38,14 @@
     <meta property="og:url" content="https://covid19india.slanglabs.in/">
     <meta property="og:title" content="India Covid-19 Voice enabled tracker  | India ">
     <meta property="og:description" content="Voice enabled volunteer-driven crowdsourced initiative to track the spread of Coronavirus (COVID-19) in India.">
-    <meta property="og:image" content="/thumbnail.png">
+    <meta property="og:image" content="/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://covid19india.slanglabs.in/">
     <meta property="twitter:title" content="India Covid-19 Voice enabled tracker | India ">
     <meta property="twitter:description" content="Voice enabled volunteer-driven crowdsourced initiative to track the spread of Coronavirus (COVID-19) in India">
-    <meta property="twitter:image" content="/thumbnail.png">
+    <meta property="twitter:image" content="/thumbnail.jpg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
